5개 핵심 포스트 시니어급 심화 + 면접포인트 JS 버그 수정
- sync-async-block: 컨텍스트 스위치 CPU 내부, epoll/select/kqueue, Virtual Thread 캐리어 (520→1140줄)
- redis-data-structures: Skip List 내부, HyperLogLog 수식, Stream ACK 메커니즘 (656→1341줄)
- local-cache-comparison: W-TinyLFU Count-Min Sketch, Caffeine Striped Buffer, Off-Heap Cleaner (931→1583줄)
- kafka-fundamentals: Partition Assignment, Cooperative Rebalancing, Zero-Copy DMA (717→1069줄)
- caching-strategy: XFetch 알고리즘, Double Delete 타임라인, Split-Brain 시나리오 (847→1469줄)
- scripts.html: 극한 시나리오 JS가 면접포인트 h2를 삼키는 버그 수정

Co-Authored-By: Claude Opus 4.6 (1M context) <noreply@anthropic.com>